--- a/css/styles.css
+++ b/css/styles.css
@@ -10287,8 +10287,24 @@ body {
   margin-bottom: 5rem;
 }
 
+.iframe-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+
+.iframe-container iframe {
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+}
+
 .projects-section {
   padding: 10rem 0;
+  margin-top: 0; !important;
 }
 .projects-section .featured-text {
   padding: 2rem;
